gts-macros/tests/compile_fail/unknown_attribute.rs
//! Test: Unknown attribute key

use gts_macros::struct_to_gts_schema;

#[struct_to_gts_schema(
    dir_path = "schemas",
    base = true,
    schema_id = "gts.x.app.entities.user.v1~",
    description = "User entity",
    properties = "id",
    unknown_key = "some value"
)]
pub struct User {
    pub id: String,
}

fn main() {}
